[main] inclumin.ru добавлен в разрешенные домены